# loop-whole

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  INDEX.md  README.md  package-lock.json  package.json
.loopwhole.example/: demo-session.json  session.schema.json
benchmark/: .gitignore  README.md  TESTING.md  build_benchmark_results.py  generate_predictions.py  test_build_benchmark_results.py
docs/: alignment-conversation.md  controlled-experiments.md  curl.md  product-motivation.md  verification-alignment-conversation.md
docs/demo/: manual.md
docs/planning/: context-optimization.md  features-spec.md  features-spec2.md  frontend.md  hackthe6ixTracks.md  silent-failures.md
docs/planning/archive/: features-spec.md
docs/planning/deferred/: silent-failures.md
docs/tests/: manual.md
docs/tools/: bash.md  edit.md  read.md  write.md
scripts/: build_demo_session.py  build_mock_benchmark.py  setup-workspace.sh
server/: Cargo.toml  INDEX.md
server/src/: api.rs  backboard.rs  commands.rs  logging.rs  main.rs  mcp.rs  schema.rs  store.rs  tools.rs
server/tests/: context.md
src/: commands.rs  main.rs  mcp.rs  schema.rs  store.rs  tools.rs
tests/: context.md
tests/opencode/: README.md  opencode.json  run-smoke.sh
web/: .gitignore  INDEX.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
web/src/: Antigravity.jsx  App.jsx  Benchmarks.jsx  ContextTimeline.jsx  Dashboard.jsx  Landing.jsx  SessionChat.jsx  ToolReplay.jsx  api.js  backboardApi.js  index.css  main.jsx  useLiveSession.js
(+16 files in other folders)
