[package]
name = "warp-mcp-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "2.2", features = ["transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
